styles/style.css
/* ... */
.video-js .vjs-quality-changer .vjs-quality-value-wrapper {
    position: relative;
    width: 100%;
    height: 100%;
    border-radius: 6px;
    box-shadow: 0px 0px 0px 0px #fff;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 0.5em;
    background: none;
    cursor: pointer;
    z-index: 2;
}

.video-js .vjs-quality-changer.vjs-hover .vjs-quality-value-wrapper {
    box-shadow: 0px 0px 0px 2px #fff;
    background: #363636;
}

.video-js .vjs-quality-changer .vjs-quality-value-wrapper .vjs-icon-placeholder {
    width: 1em;
    height: 1em;
    background-image: url(../img/expand.svg);
}

.video-js .vjs-quality-changer .vjs-menu-button {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 2;
}

.video-js .vjs-quality-changer .vjs-menu {
    margin-bottom: 0;
    width: 100%;
    left: 0;
    z-index: 1;
}

.video-js .vjs-quality-changer .vjs-menu .vjs-menu-content {
    bottom: 0;
    height: 5.15em;
    border-radius: 6px;
    padding-bottom: 1.5em;
    background: #363636;
}

.video-js .vjs-quality-changer .vjs-menu li {
    display: flex;
    justify-content: space-around;
    font-size: inherit;
}

.video-js .vjs-quality-changer .vjs-menu li.vjs-selected {
    background-color: unset;
    color: unset;
}

.video-js .vjs-quality-changer .vjs-menu li .vjs-icon-placeholder {
    width: 1em;
    height: 1em;
    background-image: url(../img/check.svg);
    visibility: hidden;
}

.video-js .vjs-quality-changer .vjs-menu li.vjs-selected .vjs-icon-placeholder {
    visibility: visible;
}

/* comp-slider */
.comp-slider {
    position: relative;
}

@media (max-width: 900px) and (orientation: portrait) {
    .comp-slider--main-section {
        width: 100%;
    }
}

@media (max-width: 900px) and (orientation: landscape) {
    .comp-slider--main-section {
        height: 100%;
    }
}

@media (max-width: 900px) {
    .comp-slider--subsection {
        margin: auto;
        width: fit-content;
    }   
}

@media (min-width: 900px) {
    .comp-slider--subsection {
        width: 100%;
    }   
}

.comp-slider--main-section-failed {
    width: 100%;
}

.comp-slider.media-viewer__media-component--fullscreen {
    height: auto;
    width: auto;
}

@media (max-width: 900px) and (orientation: portrait) {
    .comp-slider.media-viewer__media-component--fullscreen {
        width: 100%;
    }
}

@media (max-width: 900px) and (orientation: landscape) {
    .comp-slider.media-viewer__media-component--fullscreen {
        height: 100%;
    }
}

.comp-slider__before-img {
    display: block;
    max-width: 100%;
}

@media (max-width: 900px) and (orientation: portrait) {
    .comp-slider__before-img--main-section {
        width: 100%;
    }
}

@media (max-width: 900px) and (orientation: landscape) {
    .comp-slider__before-img--main-section {
        height: 100%;
    }
}

@media (max-width: 900px) {
    .comp-slider__before-img--subsection {
        max-height: 50vh;
    }
}

@media (min-width: 900px) {
    .comp-slider__before-img--subsection {
        width: 100%;
    }
}

.media-viewer__media-component--fullscreen .comp-slider__before-img {
    max-height: initial;
}

@media (max-width: 900px) and (orientation: portrait) {
    .media-viewer__media-component--fullscreen .comp-slider__before-img {
        width: 100%;
    }
}

@media (max-width: 900px) and (orientation: landscape) {
    .media-viewer__media-component--fullscreen .comp-slider__before-img {
        height: 100%;
    }
}

.comp-slider__before-img--hidden {
    display: none;
}

.comp-slider__after-img-container {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 50%;
    overflow: hidden;
}

.comp-slider__after-img-container--hidden {
    display: none;
}

.comp-slider__after-img {
    display: block;
    height: 100%;
    width: auto;
}

.comp-slider__input--sr-only {
    position: absolute;
    left: -10000px;
    top: auto;
    width: 1px;
    height: 1px;
    overflow: hidden;
}

.comp-slider__slider {
    position: absolute;
    top: 0;
    left: 50%;
    transform: translateX(-50%);
    height: 100%;
    width: 0.3125em;
    cursor: ew-resize;
    background: #cccccc;
}

.comp-slider__slider--hidden {
    display: none;
}

.comp-slider__slider-btn {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 3.125em;
    height: 3.125em;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #15404e;
    border-radius: 100%;
    box-shadow: 0 0 0 2px rgb(0 0 0 / 20%), 0 0 20px rgb(0 0 0 / 60%), inset 0px 1px 2px 1px rgb(255 255 255 / 30%);
}

.comp-slider__input:focus + .comp-slider__slider .comp-slider__slider-btn {
    outline: 1px auto Highlight;
    outline: 1px auto -webkit-focus-ring-color;
}

.comp-slider__slider-btn-arrow {
    margin: 0px -5px;
    width: 55%;
    display: flex;
    fill: #ccc;
}

.comp-slider__fail-msg-container {
    width: 100%;
    padding-bottom: 56.25%;
}

.comp-slider__fail-msg-container--hidden {
    display: none;
}

.comp-slider__fail-msg {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: flex;
    flex-direction: column;
    align-items: center;
    color: #575757;
    fill: #575757;
    font-size: 1em;
    text-align: center;
}

.comp-slider__fail-msg-icon {
    width: 6em;
}

.comp-slider__fail-msg-text {
    margin: 0;
    font-weight: 600;
}

/* learn-more */
.learn-more {
    padding: 1em;
    padding: 1em max(1em, env(safe-area-inset-right)) 1em max(1em, env(safe-area-inset-left));
    color: #fff;
    background-color: #858585;
    font-size: 1rem;
}

.learn-more--in-section {
    flex: 0 0 auto;
    margin-bottom: 1em;
}

.learn-more__title {
    margin-bottom: 1rem;
    margin-block-start: 0;
    font-size: 1.35em;
}
/* ... */

